# xorg-xserver

glamor/: glamor.c  glamor_priv.h
hw/xwayland/: Makefile.am  xwayland-glamor-hybris.c  xwayland-glamor.c  xwayland.h
